Bug 475410 - System freezes when duplicating files multiple times
Summary: System freezes when duplicating files multiple times
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.04.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-09 22:24 UTC by wooden445
Modified: 2024-01-20 04:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wooden445 2023-10-09 22:24:47 UTC
SUMMARY
System freezes when duplicating files (CTRL + D) multiple times.

STEPS TO REPRODUCE
1. Select some files.
2. Press CTRL + D.
3. Select all files (old + duplicates) and press CTRL + D again.
4. System freezes.

OBSERVED RESULT
System freezes.

EXPECTED RESULT
All files are duplicated, or gives an error message.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Ubuntu 23.04
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
The freeze appears seems to be unrelated to the number of files you try to duplicate, tested both 3 and 100. Duplicating once works, but not a second time.
Comment 1 wooden445 2023-10-09 22:49:48 UTC
Audio from browser continues to play, but everything else is frozen.
Comment 2 wooden445 2023-10-10 17:09:56 UTC
Using Kubuntu.
Comment 3 Bug Janitor Service 2023-12-28 10:07:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/690
Comment 4 Méven Car 2024-01-13 08:38:41 UTC
Git commit c8dffc433caacc9955b3054f6255ae50176e5533 by Méven Car, on behalf of Eugene Popov.
Committed on 13/01/2024 at 09:28.
Pushed by meven into branch 'master'.

Always automatically choose a new file name while duplicating

Since now when duplicating items we automatically generate a name for the new item, we can do the same if an item with that name already exists.

M  +14   -7    src/views/dolphinview.cpp
M  +1    -0    src/views/dolphinview.h

https://invent.kde.org/system/dolphin/-/commit/c8dffc433caacc9955b3054f6255ae50176e5533