Always automatically choose a new file name while duplicating

Since now when duplicating items we automatically generate a name for the new item, we can do the same if an item with that name already exists.

BUG: 475410